Fri Sep 17 01:13:24 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk-doc.xsl: Add the images from the gallery on top
	of the refentry they point to.

	* style.css: Move the css bits of the gallery implementation
	here.

Fri Sep 17 00:30:16 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk-doc.xsl: Don't generate <link rel="refentry">
	links, since e.g. the GTK+ docs contain MANY refentries.

2004-09-10  Damon Chaplin  <damon@gnome.org>

	* autogen.sh: support automake 1.8. (part of #151219).

	* examples/Makefile.am: require automake 1.6.

	* gtkdoc-scan.in: create an empty MODULE-overrides.txt file if it
	doesn't exist. gtkdoc.make expects one to exist.

	* doc/setting-up.txt: updated to document new procedure using
	gtkdoc.make.

	* examples/Makefile.am: updated to use gtkdoc.make.

	* examples/configure.in: removed this. gtkdoc.make is used instead
	now.

	* examples/README: updated.

	* Makefile.am (EXTRA_DIST): removed examples/configure.in.

Wed Sep  8 01:12:25 2004  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-scan.in (ScanHeader): 
	* gtkdoc-mktmpl.in (OutputDeclaration): 
	* gtkdoc-mkdb.in (OutputFunction): Accept mixtures of *
	and const in return types.

Wed Sep 01 05:58:08 2004  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in: Remove a debug printf

Tue Aug 24 02:30:08 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk-doc.xsl: Add support for a gallery of widget images.
	
Wed Jul 28 13:00:54 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk-doc.xsl: remove the examples from the toc.

2004-07-28  Damon Chaplin  <damon@gnome.org>

	* doc/sections-file.txt: mention use of '#' for comments.

	* gtkdoc-mkdb.in: removed HEADER_FILE stuff, since it isn't used now.

2004-07-23  Damon Chaplin  <damon@gnome.org>

	* examples/Makefile.am (all-local): add empty all-local target for
	when ENABLE_GTK_DOC is false. (#148209, Martin Quinson)

Fri Jul 23 13:21:34 2004  Matthias Clasen  <maclas@gmx.de>

	* gtkdoc-mkdb.in (ScanSourceFile): Fix regexps for matching