@@ -1,3 +1,9 @@
+2004-10-13  Damon Chaplin  <damon@gnome.org>
+
+	* gtkdoc-scanobj.in: 
+	* gtkdoc-scangobj.in: patch from Benjamin Otte to get rid of
+	-Wsign-compare warnings. Bug #137013.
+
 Fri Sep 17 01:13:24 2004  Matthias Clasen  <maclas@gmx.de>
 
 	* gtk-doc.xsl: Add the images from the gallery on top
